<resources>
    <string name="app_name">FireBaseDB</string>
    <string name="title_monitoreo">Monitoreo de Sensores</string>
    <string name="title_seteo">Seteo de Sensores</string>
    <string name="label_temperatura">Temperatura</string>
    <string name="label_humedad">Humedad</string>
    <string name="label_presion">Presión</string>
    <string name="label_velocidad">Velocidad</string>
    <string name="btn_set">Set</string>
</resources>