<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="Monitoreo en tiempo real"
            android:textColor="@color/title_color"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Monitoring: Temperature -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/temperatura"
                android:contentDescription="@string/label_temperatura" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_temperatura"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/valor_Temperatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="250.89999389648438 °C"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Monitoring: Humidity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/humedad"
                android:contentDescription="@string/label_humedad" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_humedad"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/valor_Humedad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="250.78799438476562 %"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Monitoring: Pressure -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/presion"
                android:contentDescription="@string/label_presion" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_presion"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/valor_Presion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1500 hPa"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Monitoring: Velocity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/velocidad"
                android:contentDescription="@string/label_velocidad" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_velocidad"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/valor_Velocidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="150 km/h"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/title_seteo"
            android:textColor="@color/title_color"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Setting: Temperature -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/temperatura"
                android:contentDescription="@string/label_temperatura" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_temperatura"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/setvalor_Temperatura"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="25"
                    android:textSize="14sp"
                    android:autofillHints="none" />
            </LinearLayout>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_btn"
                android:onClick="clickBotonTemperatura"
                android:text="@string/btn_set"
                android:textAllCaps="false" />
        </LinearLayout>

        <!-- Setting: Humidity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/humedad"
                android:contentDescription="@string/label_humedad" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_humedad"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/setvalor_Humedad"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="25"
                    android:textSize="14sp"
                    android:autofillHints="none" />
            </LinearLayout>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_btn"
                android:onClick="clickBotonHumedad"
                android:text="@string/btn_set"
                android:textAllCaps="false" />
        </LinearLayout>

        <!-- Setting: Pressure -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/presion"
                android:contentDescription="@string/label_presion" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_presion"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/setvalor_Presion"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="1013"
                    android:textSize="14sp"
                    android:autofillHints="none" />
            </LinearLayout>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_btn"
                android:onClick="clickBotonPresion"
                android:text="@string/btn_set"
                android:textAllCaps="false" />
        </LinearLayout>

        <!-- Setting: Velocity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/velocidad"
                android:contentDescription="@string/label_velocidad" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_velocidad"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/setvalor_Velocidad"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="0"
                    android:textSize="14sp"
                    android:autofillHints="none" />
            </LinearLayout>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_btn"
                android:onClick="clickBotonVelocidad"
                android:text="@string/btn_set"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
